[gd_scene load_steps=14 format=3 uid="uid://dq6goc8r51jxw"]

[ext_resource type="Script" path="res://UI.gd" id="1_hwf0b"]
[ext_resource type="Texture2D" uid="uid://b6vh4mwvj5nnq" path="res://inventorySprites/InvAnd.png" id="1_usk78"]
[ext_resource type="Texture2D" uid="uid://c52n6bav8vytl" path="res://inventorySprites/InvRoad1L.png" id="2_jpo4s"]
[ext_resource type="Texture2D" uid="uid://c28tglvyrrfu4" path="res://inventorySprites/InvSelect.png" id="2_pyhli"]
[ext_resource type="Texture2D" uid="uid://qeyvqdenoglw" path="res://inventorySprites/InvNand.png" id="3_6aalx"]
[ext_resource type="Texture2D" uid="uid://be3fpw0u8avqv" path="res://inventorySprites/InvRoad2L.png" id="4_ntkd8"]
[ext_resource type="Texture2D" uid="uid://ds4kcm2bkj6qy" path="res://inventorySprites/InvNot.png" id="4_pyyvr"]
[ext_resource type="Texture2D" uid="uid://ftoedvx6p6nm" path="res://inventorySprites/InvOr.png" id="5_a8ndo"]
[ext_resource type="Texture2D" uid="uid://m6hiekyesa6s" path="res://inventorySprites/RoadDInventory.png" id="5_x7gmj"]
[ext_resource type="Texture2D" uid="uid://c1hvf6n24fqju" path="res://inventorySprites/RoadUInventory.png" id="6_6nr0j"]
[ext_resource type="Texture2D" uid="uid://ds526eeuoyt1d" path="res://inventorySprites/InvXor.png" id="6_7fd3y"]
[ext_resource type="Texture2D" uid="uid://tl37drnm300p" path="res://inventorySprites/RoadCInventory.png" id="7_rmj0m"]
[ext_resource type="Texture2D" uid="uid://dy7olwa1oaboj" path="res://inventorySprites/RoadVInventory.png" id="8_xw74x"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1200.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hwf0b")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 3646.0
offset_bottom = 731.0

[node name="RoadS_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_jpo4s")
texture_pressed = ExtResource("2_pyhli")

[node name="RoadB_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_ntkd8")
texture_pressed = ExtResource("2_pyhli")

[node name="RoadD_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_x7gmj")
texture_pressed = ExtResource("2_pyhli")

[node name="RoadU_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_6nr0j")
texture_pressed = ExtResource("2_pyhli")

[node name="RoadC_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_rmj0m")
texture_pressed = ExtResource("2_pyhli")

[node name="RoadV_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_xw74x")
texture_pressed = ExtResource("2_pyhli")

[node name="AND_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_usk78")
texture_pressed = ExtResource("2_pyhli")

[node name="NAND_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_6aalx")
texture_pressed = ExtResource("2_pyhli")

[node name="NOT_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_pyyvr")
texture_pressed = ExtResource("2_pyhli")

[node name="OR_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_a8ndo")
texture_pressed = ExtResource("2_pyhli")

[node name="XOR_Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_7fd3y")
texture_pressed = ExtResource("2_pyhli")

[connection signal="pressed" from="HBoxContainer/RoadS_Button" to="." method="_on_road_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RoadB_Button" to="." method="_on_road_b_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RoadD_Button" to="." method="_on_road_d_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RoadU_Button" to="." method="_on_road_u_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RoadC_Button" to="." method="_on_road_c_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RoadV_Button" to="." method="_on_road_v_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AND_Button" to="." method="_on_and_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NAND_Button" to="." method="_on_nand_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NOT_Button" to="." method="_on_not_button_pressed"]
[connection signal="pressed" from="HBoxContainer/OR_Button" to="." method="_on_or_button_pressed"]
[connection signal="pressed" from="HBoxContainer/XOR_Button" to="." method="_on_xor_button_pressed"]
